# github-issue-email-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/helpdesk_bridge/: __init__.py  config.py  main.py  retry_worker.py  subscription_lifecycle.py
src/helpdesk_bridge/services/: __init__.py  alerts.py  email_parser.py  github_client.py  graph_client.py  issue_body_parser.py  logging_config.py  retry.py  retry_processor.py  store.py  subscription_manager.py  token_codec.py
src/helpdesk_bridge/webhooks/: __init__.py  github_handler.py  graph_handler.py
tests/: test_email_parser.py  test_graph_handler.py  test_retry_processor.py  test_store_retry_queue.py  test_subscription_manager.py  test_token_codec.py
